# logcrawler

./: .dockerignore  01_input_game_data.py  03_representation_exporter.py  06_extract_images.py  08_input_motion_data_rust.py  10_input_behavior_frames.py  11_input_behavior_symbols.py  12_input_images.py  14_calculate_closest_frames.py  Dockerfile  README.md  bla.py  fast_ls.c  input_game_data.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build_logcrawler.yml  scan.yml
scripts/: check_duplicates.py  check_missing_projects.py  combine_pi_videos.py  fix_image_paths.py  get_annotations.py  get_go25_data.sh  get_go26_data_images.sh  patch_games.py  patch_images.py  patch_labelstudio.py  patch_ls_webhook.py  sort_logs.py  test_faster_video_creation.py  update_testgame_flag.py
src/: main.py
src/ingester/: 02_combine_logs.py  _01_process_events.py  _02_process_games.py  _03_process_experiments.py  _04_process_videos.py  _06_process_logdata.py  __init__.py  calculate_closest_frame.py  calculate_image_stats.py  calculate_logstatus_cognition.py  calculate_logstatus_motion.py  combine_logs.py  create_log_video.py  extract_images.py  fix_robot_pose.py  handle_events.py  handle_experiments.py  handle_games.py  handle_logs.py  handle_other_video_data.py  handle_video_data.py  input_cognition_data.py  input_cognition_frames.py  input_images.py  (+8 more)
standalone/: single_combine.py
tests/: annotation_test.py  bulk_tests.py  create_framefilter.py  frame_time_diffrences.py  mmap_test.py  test_representation_exporter.py
utils/: check_teams.py
(+7 files in other folders)
